--- a/docs/maindoc.tex
+++ b/docs/maindoc.tex
@@ -119,7 +119,7 @@
 
 
 
-\title{Interact with external C++ and implement distributions with analytic derivatives for stan.}
+\title{Interact with external C++ and implement distributions with analytic derivatives for Stan.}
 \author{Zhi Ling}
 \date{\today}
 
